--- a/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
+++ b/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
@@ -164,10 +164,15 @@
     <ClCompile Include="Source\Material.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
+    <ClCompile Include="Source\PlinkoBall.cpp" />
+    <ClCompile Include="Source\PlinkoCylinder.cpp" />
+    <ClCompile Include="Source\PlinkoGlass.cpp" />
+    <ClCompile Include="Source\PlinkoWall.cpp" />
     <ClCompile Include="Source\RigidBody.cpp" />
     <ClCompile Include="Source\Scene.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\SceneManager.cpp" />
+    <ClCompile Include="Source\ScenePlinko.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\Time.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
@@ -192,10 +197,15 @@
     <ClInclude Include="Source\Material.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
+    <ClInclude Include="Source\PlinkoBall.h" />
+    <ClInclude Include="Source\PlinkoCylinder.h" />
+    <ClInclude Include="Source\PlinkoGlass.h" />
+    <ClInclude Include="Source\PlinkoWall.h" />
     <ClInclude Include="Source\RigidBody.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\SceneGame.h" />
     <ClInclude Include="Source\SceneManager.h" />
+    <ClInclude Include="Source\ScenePlinko.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\Time.h" />
     <ClInclude Include="Source\Utility.h" />
