--- a/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
+++ b/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Source\PlinkoBoard.cpp" />
     <ClCompile Include="Source\PlinkoCylinder.cpp" />
     <ClCompile Include="Source\PlinkoGlass.cpp" />
+    <ClCompile Include="Source\PlinkoPointsWall.cpp" />
     <ClCompile Include="Source\PlinkoWall.cpp" />
     <ClCompile Include="Source\RigidBody.cpp" />
     <ClCompile Include="Source\Scene.cpp" />
@@ -202,6 +203,7 @@
     <ClInclude Include="Source\PlinkoBoard.h" />
     <ClInclude Include="Source\PlinkoCylinder.h" />
     <ClInclude Include="Source\PlinkoGlass.h" />
+    <ClInclude Include="Source\PlinkoPointsWall.h" />
     <ClInclude Include="Source\PlinkoWall.h" />
     <ClInclude Include="Source\RigidBody.h" />
     <ClInclude Include="Source\Scene.h" />
