--- a/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
+++ b/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
@@ -151,8 +151,10 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\CK_Ball.cpp" />
-    <ClCompile Include="Source\CK_Cube.cpp" />
-    <ClCompile Include="Source\CK_Cylinder.cpp" />
+    <ClCompile Include="Source\CK_Can.cpp" />
+    <ClCompile Include="Source\CK_Counter.cpp" />
+    <ClCompile Include="Source\CK_Counter2.cpp" />
+    <ClCompile Include="Source\CK_Table.cpp" />
     <ClCompile Include="Source\ColliderManager.cpp" />
     <ClCompile Include="Source\CollisionManager.cpp" />
     <ClCompile Include="Source\CQuad.cpp" />
@@ -182,8 +184,10 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\CK_Ball.h" />
-    <ClInclude Include="Source\CK_Cube.h" />
-    <ClInclude Include="Source\CK_Cylinder.h" />
+    <ClInclude Include="Source\CK_Can.h" />
+    <ClInclude Include="Source\CK_Counter.h" />
+    <ClInclude Include="Source\CK_Counter2.h" />
+    <ClInclude Include="Source\CK_Table.h" />
     <ClInclude Include="Source\ColliderManager.h" />
     <ClInclude Include="Source\CollisionManager.h" />
     <ClInclude Include="Source\FPCamera.h" />
