--- a/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
+++ b/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
@@ -151,9 +151,12 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\CK_Ball.cpp" />
+    <ClCompile Include="Source\CK_BoothRoof.cpp" />
+    <ClCompile Include="Source\CK_BoothWall.cpp" />
     <ClCompile Include="Source\CK_Can.cpp" />
     <ClCompile Include="Source\CK_Counter.cpp" />
     <ClCompile Include="Source\CK_Counter2.cpp" />
+    <ClCompile Include="Source\CK_Floor.cpp" />
     <ClCompile Include="Source\CK_Table.cpp" />
     <ClCompile Include="Source\ColliderManager.cpp" />
     <ClCompile Include="Source\CollisionManager.cpp" />
@@ -184,9 +187,12 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\CK_Ball.h" />
+    <ClInclude Include="Source\CK_BoothRoof.h" />
+    <ClInclude Include="Source\CK_BoothWall.h" />
     <ClInclude Include="Source\CK_Can.h" />
     <ClInclude Include="Source\CK_Counter.h" />
     <ClInclude Include="Source\CK_Counter2.h" />
+    <ClInclude Include="Source\CK_Floor.h" />
     <ClInclude Include="Source\CK_Table.h" />
     <ClInclude Include="Source\ColliderManager.h" />
     <ClInclude Include="Source\CollisionManager.h" />
