--- a/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
+++ b/DX1125 - CGSPRJ - WIU/DXGL-FRAMEWORK/Application/Application.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Source\CollisionManager.cpp" />
     <ClCompile Include="Source\CQuad.cpp" />
     <ClCompile Include="Source\FPCamera.cpp" />
+    <ClCompile Include="Source\GameManager.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
     <ClCompile Include="Source\GameObjectManager.cpp" />
     <ClCompile Include="Source\Light.cpp" />
@@ -168,10 +169,17 @@
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\PlayerHitBox.cpp" />
+    <ClCompile Include="Source\PlinkoBall.cpp" />
+    <ClCompile Include="Source\PlinkoBoard.cpp" />
+    <ClCompile Include="Source\PlinkoCylinder.cpp" />
+    <ClCompile Include="Source\PlinkoGlass.cpp" />
+    <ClCompile Include="Source\PlinkoPointsWall.cpp" />
+    <ClCompile Include="Source\PlinkoWall.cpp" />
     <ClCompile Include="Source\RigidBody.cpp" />
     <ClCompile Include="Source\Scene.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\SceneManager.cpp" />
+    <ClCompile Include="Source\ScenePlinko.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\Time.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
@@ -187,6 +195,7 @@
     <ClInclude Include="Source\ColliderManager.h" />
     <ClInclude Include="Source\CollisionManager.h" />
     <ClInclude Include="Source\FPCamera.h" />
+    <ClInclude Include="Source\GameManager.h" />
     <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\GameObjectManager.h" />
     <ClInclude Include="Source\Light.h" />
@@ -200,10 +209,17 @@
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\PlayerHitBox.h" />
+    <ClInclude Include="Source\PlinkoBall.h" />
+    <ClInclude Include="Source\PlinkoBoard.h" />
+    <ClInclude Include="Source\PlinkoCylinder.h" />
+    <ClInclude Include="Source\PlinkoGlass.h" />
+    <ClInclude Include="Source\PlinkoPointsWall.h" />
+    <ClInclude Include="Source\PlinkoWall.h" />
     <ClInclude Include="Source\RigidBody.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\SceneGame.h" />
     <ClInclude Include="Source\SceneManager.h" />
+    <ClInclude Include="Source\ScenePlinko.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\Time.h" />
     <ClInclude Include="Source\Utility.h" />
